--- a/CV_Aldi Akbar Alimi_STTNF.html
+++ b/CV_Aldi Akbar Alimi_STTNF.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Aldi Akbar Alimi</title>
 </head>
-<body>
+<body bgcolor="lightblue">
 	<h1 align="center">Curriculum Vitae</h1>
-	<img src="foto.jpg" align="right" width="180px" height="250px">
+	<img src="foto.jpg" align="right" width="180px" height="265px">
 	
 	<!-- data diri -->
 		<hr>
